[fix] Set message z-index to 10.

--- a/widgets/main/theme/oldschool.css
+++ b/widgets/main/theme/oldschool.css
@@ -46,6 +46,7 @@ div[w-tmapikey] .event-message {
     line-height: 1.6;
     color: #ffffff;
     opacity: 0;
+    z-index: 10;
     /* TODO: update after release to  http://developer.ticketmaster.com/*/
     background: #7356a5 url("http://ticketmaster-api-staging.github.io/assets/img/widgets/message_logo.svg") no-repeat 16px 50%;
     -webkit-transition: top 0.5s ease-in-out, opacity 0.5s ease-in-out;
